samples/_failures_safe/1761197349_cc7527_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a46a0abf.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_a46a0abf.c:185: error: expected ‘{’ at end of input
